[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rank_order_assignment"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "David Kopala", email = "kopala.david@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy"
]

[project.urls]
Documentation = "https://github.com/David Kopala/rank-order-assignment#readme"
Issues = "https://github.com/David Kopala/rank-order-assignment/issues"
Source = "https://github.com/David Kopala/rank-order-assignment"

[tool.hatch.version]
path = "src/rank_order_assignment/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/rank_order_assignment tests}"

[tool.coverage.run]
source_pkgs = ["rank_order_assignment", "tests"]
branch = true
parallel = true
omit = [
  "src/rank_order_assignment/__about__.py",
]

[tool.coverage.paths]
rank_order_assignment = ["src/rank_order_assignment", "*/rank-order-assignment/src/rank_order_assignment"]
tests = ["tests", "*/rank-order-assignment/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
